Fixed word spacing

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ h1, h2 {
     background-color:#f0eae4;
     padding: 1em;
     border-radius: 15px;
+    word-spacing: 0em;
 }
 
 a:hover {
